# puppet-warp

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.py
docs/: README.md  README.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  pwarp.conf.rst  pwarp.core.rst  pwarp.data.rst  pwarp.demo.rst  pwarp.mesh.rst  pwarp.rst  pwarp.warp.rst
src/pwarp/: __init__.py  _io.py  _np.py  logger.py  mesh.py  profiler.py  render.py  settings.py
src/pwarp/conf/: __init__.py
src/pwarp/conf/logging_schemas/: default.json
src/pwarp/core/: arap.py  const.py  dtype.py  ops.py  precompute.py  warp.py
src/pwarp/data/: puppet.py
src/pwarp/demo/: demo.py  draw.py  misc.py
src/pwarp/mesh/: tri.py
src/pwarp/ui/: draw.py
src/pwarp/warp/: affine.py  tri.py  warp.py
tests/: _gen_small_mesh_case.py  test__io.py  test_affine.py  test_arap_core.py  test_end2end.py  test_graph_warp.py  test_tri.py
tests/data/: small_control_indices.npy  small_faces.npy  small_shifted_locations.npy  small_vertices.npy  small_warped_expected.npy
